--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 <p>Email: jangala.satvik@gmail.com</p>
 <p>Address:</p>
 <p>
-  Phase-6 Nizampet<br />
+   Nizampet<br />
   Hyderabad<br />
   India <br />
 </p>
